# eventrs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: README.md
docs/api/: core-traits.md  event-bus.md  handlers.md  utilities.md
docs/architecture/: design-principles.md  overview.md  performance.md
docs/benchmarks/: comparisons.md  performance-overview.md
docs/examples/: async-events.md  basic-usage.md  complex-scenarios.md  integration-patterns.md
docs/features/: async-support.md  event-definition.md  event-emission.md  event-handlers.md  filtering.md  middleware.md  priority-system.md  thread-safety.md
eventrs/: Cargo.toml  PROGRESS.md
eventrs-derive/: Cargo.toml
eventrs-derive/src/: lib.rs
eventrs/benches/: event_bus_benchmarks.rs
eventrs/examples/: async_derive_example.rs  async_example.rs  basic_example.rs  filtering_example.rs  filtering_integration_test.rs  priority_groups.rs  test_global_filtering.rs
eventrs/src/: async_event_bus.rs  error.rs  event.rs  event_bus.rs  filter.rs  handler.rs  lib.rs  metadata.rs  metrics.rs  middleware.rs  priority.rs  test_builder.rs  test_dynamic_filters.rs  test_global_filters.rs  test_metrics.rs  test_middleware.rs  test_thread_safe.rs  testing.rs  thread_safe.rs  tracing.rs
eventrs/src/filter/: any.rs  cacheable.rs  manager.rs
eventrs/tests/: load_tests.rs  performance_regression.rs  simple_performance.rs
