[workspace]
members = [
    "eventrs",
    "eventrs-derive",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["EventRS Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/username/eventrs"

[workspace.dependencies]
# Core dependencies
thiserror = "1.0"

# Async support
tokio = { version = "1.0", features = ["rt", "sync", "time"] }
futures = "0.3"

# Proc macro dependencies
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

# Optional features
prometheus = "0.13"
tracing-core = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Dev dependencies
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
tokio-test = "0.4"
async-std = "1.12"